# gbigsmiles_cli

./: AUTHORS.rst  README.md  pyproject.toml
src/gbigcli/: bigsmiles.py  cli.py  generation.py
tests/: conftest.py  test_bigsmiles.py  test_cli.py
